<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_balance"
        android:icon="@drawable/home"
        android:title="Balance" />

    <item
        android:id="@+id/navigation_months"
        android:icon="@drawable/months"
        android:title="Months" />

    <item
        android:id="@+id/navigation_permanents"
        android:icon="@drawable/clock"
        android:title="Permanents" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/stats"
...
