...
            android:background="@drawable/round_button"
            android:backgroundTint="#00C60D"
            android:text="+"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/ausgaben_monat"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/einnahmen_monat"
            android:background="@android:drawable/progress_horizontal"
            android:backgroundTint="@android:color/darker_gray"
            android:gravity="center"
            android:text="Ausgaben"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
...
