...
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Standing Orders">


        <ImageButton
            android:id="@+id/add_perms_button"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/ic_menu_add"
...
